Move modal close button after modal content to avoid rendering overlaps, adjust instagram padding to be a flat 60 for mobile views instead of picking the larger of 60 and the calculated padding, and set the instagram embed wrapper to position absolute to get it to behave more properly in IE and Safari

--- a/src/content/css/modal-content-card.less
+++ b/src/content/css/modal-content-card.less
@@ -89,6 +89,9 @@
             iframe.instagram-media {
                 width: calc(~"100%");
             }
+            .instagram-modal {
+                position: absolute;
+            }
         }
 
         .hub-modal-content-view {
